--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,3 +1,10 @@
+body {
+    margin-bottom:50px;
+}
+
 .container-div{ 
     position: relative;
+    padding-top: 100px;
+    padding-left: 100px;
+    height: 90%;
 }
