--- a/src/components/main/resources/Content.css
+++ b/src/components/main/resources/Content.css
@@ -1,10 +1,14 @@
+body {
+    margin-bottom:50px;
+}
+
 .container-div{ 
     position: relative;
-    Display: flex;
-    Height: 100vh;
-    Width: 100vw; 
-    Align-Items: center;
-    Justify-Content: centre;
+    display: flex;
+    width: 100%; 
+    align-items: center;
+    justify-content: center;
+    height: 100%;
 }
 
 .loading {
