--- a/src/components/utilities/css/Footer.css
+++ b/src/components/utilities/css/Footer.css
@@ -1,10 +1,34 @@
 .footer {
-     position: fixed;
-    height: 2.5rem; 
-    bottom: 0;
-    margin: 0;
-    height: 65px;
-    border-top: 1px solid #fff;
-    width: 100%;
-    background: #EDA731; 
-  }
+  position:fixed;
+  left:0;
+  bottom:0;
+  right:0;
+  height: 65px;
+  line-height: 2rem;
+  font-size: 1.1rem;
+  width: 100%;
+  background: #EDA731; 
+  margin-top: 1rem;
+  padding: 1rem;
+}
+
+.footer-content {
+  color: white;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 10px;
+}
+
+span {
+  margin: 0 10px;
+}
+
+span:first-of-type {
+  margin-left: 0;
+}
+
+span:last-of-type {
+  margin-right: 0;
+}
