--- a/src/components/utilities/css/Header.css
+++ b/src/components/utilities/css/Header.css
@@ -1,9 +1,11 @@
 .Header {
     background-color: #EDA731!important;
-    position: fixed;
+    position: relative;
     left:0;
     right:0;
     top:0;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .toolbar {
